k8s/base/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflix-catalog
  namespace: miniflix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: miniflix-catalog
  template:
    metadata:
      labels:
        app: miniflix-catalog
    spec:
      containers:
        - name: catalog
          image: miniflix-catalog:latest
          ports:
            - containerPort: 5000
