k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflix-frontend
  namespace: miniflix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: miniflix-frontend
  template:
    metadata:
      labels:
        app: miniflix-frontend
    spec:
      containers:
        - name: nginx
          image: miniflix-frontend:latest
          ports:
            - containerPort: 80
