k8s/base/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-miniflix
  namespace: miniflix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-miniflix
  template:
    metadata:
      labels:
        app: hello-miniflix
    spec:
      containers:
        - name: web
          image: hashicorp/http-echo:1.0
          args:
            - "-text=Hello from MiniFlix (GitOps on Kind) ✅"
          ports:
            - containerPort: 5678
