k8s/base/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-miniflix
  namespace: miniflix
spec:
  selector:
    app: hello-miniflix
  ports:
    - name: http
      port: 80
      targetPort: 5678
