k8s/base/hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflix-ingress
  namespace: miniflix
spec:
  ingressClassName: nginx
  rules:
    - host: miniflix.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-miniflix
                port:
                  number: 80
